portainer/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: portainer
spec:
  selector:
    matchLabels:
      app: portainer
  template:

    metadata:
      labels:
        app: portainer
    spec:
      serviceAccountName: portainer-sa-clusteradmin
      containers:
        - name: portainer
          image: portainer/portainer-k8s-beta:linux-amd64
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              protocol: TCP
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
          - mountPath: /data
            name: portainer-data
      volumes:
      - name: portainer-data
        persistentVolumeClaim:
          claimName: portainer-pv-claim
