portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  type: LoadBalancer
  ports:
    - name: "9000"
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: "8000"
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: portainer
