portainer/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.arthurdanjou.fr`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
  tls:
    store:
      name: default
